[package]
name = "ramp"
version = "0.1.0"
description = "Refined Advanced Music Player"
repository = "https://github.com/mkopa/ramp"
authors = ["Marcin Kopa <marcin@marcin.info>"]
license = "MPL-2.0"
edition = "2024"
publish = false
default-run = "ramp"

[dependencies]
clap = "3.2"
lazy_static = "1.5.0"
log = { version = "0.4", features = ["release_max_level_info"] }
pretty_env_logger = "0.5"
symphonia = { version = "0.5.5", features = ["all", "opt-simd"] }

[target.'cfg(target_os = "linux")'.dependencies]
libpulse-binding = "2.5.0"
libpulse-simple-binding = "2.5.0"

[target.'cfg(not(target_os = "linux"))'.dependencies]
arrayvec = "0.7.1"
cpal = "0.17.1"
rb = "0.4.1"
rubato = "1.0.0"
